# quantax

./: .gitignore  README.md  pyproject.toml  setup.py
deprecated/: neural_fermion.py
docs/: .buildinfo  .buildinfo.bak  api.html  genindex.html  global_defs.html  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: api.doctree  environment.pickle  global_defs.doctree  index.doctree  installation.doctree
docs/_sources/: global_defs.rst.txt  index.rst.txt  installation.rst.txt
docs/examples/: 1-RBM.html  2-TDVP.html  3-MinSR.html  4-Backflow.html  Backflow.html  MinSR.html  RBM.html  TDVP.html
docs/model/: model.html  quantax.model.GeneralDet.html  quantax.model.GeneralPf.html  quantax.model.MultiDet.html  quantax.model.MultiPf.html  quantax.model.RBM_Conv.html  quantax.model.RBM_Dense.html  quantax.model.ResConv.html  quantax.model.ResProd.html  quantax.model.ResSum.html  quantax.model.RestrictedDet.html  quantax.model.SchmittNet.html  quantax.model.SingleConv.html  quantax.model.SingleDense.html  (+4 more)
docs/nn/: nn.html  (+29 more)
examples/: 1-RBM.ipynb  MinSR.ipynb  RBM.ipynb
quantax/: __init__.py  global_defs.py
tutorials/: 0-quick_start.ipynb  1-Ising.ipynb  1-exact_diag.ipynb  2-Heisenberg.ipynb  2-build_net.ipynb  3-J1J2.ipynb  3-samples.ipynb  4-J1J2.ipynb  4-Triangular.ipynb  4-fermion_mf.ipynb  5-ExcitedState.ipynb  5-J1J2_vmc.ipynb  6-Hubbard.ipynb  7-NeuralJastrow.ipynb  7-neural_jastrow.ipynb  8-HiddenPfaffian.ipynb  8-dynamics.ipynb  build_net.ipynb  local_updates.ipynb  neural_jastrow.ipynb  samples.ipynb  triangular.ipynb
(+701 files in other folders)
